--- a/is207/food-order-website-php/css/style.css
+++ b/is207/food-order-website-php/css/style.css
@@ -5,290 +5,364 @@
 */
 
 /* CSS for All */
-*{
+* {
     margin: 0 0;
     padding: 0 0;
     font-family: Arial, Helvetica, sans-serif;
-}
-.container{
+  }
+  
+  .container {
     width: 80%;
     margin: 0 auto;
     padding: 1%;
-}
-.img-responsive{
+  }
+  .img-responsive {
     width: 100%;
-}
-.img-curve{
+  }
+  .img-curve{
     border-radius: 15px;
-}
-
-.text-right{
+    background-size: cover;
+    background-repeat: no-repeat; 
+  }
+  
+  .image-wrap{
+    width: 95px;
+    height: 105px;
+    display: block;
+  
+    overflow: hidden;
+    border-radius: 15px;
+  }
+  
+  .text-right {
     text-align: right;
-}
-.text-center{
+  }
+  .text-center {
     text-align: center;
-}
-.text-left{
+  }
+  .text-left {
     text-align: left;
-}
-.text-white{
+  }
+  .text-white {
     color: white;
-}
-
-.clearfix{
+  }
+  
+  .clearfix {
     clear: both;
     float: none;
-}
-
-a{
+  }
+  
+  a {
     color: #ff6b81;
     text-decoration: none;
-}
-a:hover{
+  }
+  a:hover {
     color: #ff4757;
-}
-
-.btn{
+  }
+  
+  .btn {
     padding: 1%;
     border: none;
     font-size: 1rem;
     border-radius: 5px;
-}
-.btn-primary{
+  }
+  .btn-primary {
     background-color: #ff6b81;
     color: white;
     cursor: pointer;
-}
-.btn-primary:hover{
+  }
+  .btn-primary:hover {
     color: white;
     background-color: #ff4757;
-}
-.btn-primary-add{
+  }
+  .btn-primary-add {
     background-color: rgb(57, 135, 236);
     color: white;
     cursor: pointer;
-    margin-left:6px;
-}
-.btn-primary-add:hover{
+    margin-left: 6px;
+  }
+  .btn-primary-add:hover {
     color: white;
     background-color: #2552e7;
-}
-h2{
+  }
+  h2 {
     color: #2f3542;
     font-size: 2rem;
     margin-bottom: 2%;
-}
-h3{
+  }
+  h3 {
     font-size: 1.5rem;
-}
-.float-container{
+  }
+  .float-container {
     position: relative;
-}
-.float-text{
+  }
+  .float-text {
     position: absolute;
     bottom: 50px;
     left: 40%;
-}
-fieldset{
+  }
+  fieldset {
     border: 1px solid white;
     margin: 5%;
     padding: 3%;
     border-radius: 5px;
-}
-
-.error{
+  }
+  
+  .error {
     padding: 2%;
     color: red;
-}
-.success{
+  }
+  .success {
     padding: 2%;
     color: green;
-}
-
-
-/* CSSS for navbar section */
-
-.logo{
+  }
+  
+  /* CSSS for navbar section */
+  .navbar {
+    background-color: white;
+  }
+  .logo {
     width: 10%;
     float: left;
-}
-.menu{
+  }
+  .menu {
     line-height: 60px;
-}
-.menu ul{
+  }
+  .menu ul {
     list-style-type: none;
-}
-
-.menu ul li{
+  }
+  
+  .menu ul li {
     display: inline;
     padding: 1%;
     font-weight: bold;
-}
-
-
-/* CSS for Food SEarch Section */
-
-.food-search{
+  }
+  
+  /* CSS for Food SEarch Section */
+  
+  .food-search {
     background-image: url(../images/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     padding: 7% 0;
-}
-
-.food-search input[type="search"]{
+  }
+  
+  .food-search input[type="search"] {
     width: 50%;
     padding: 1%;
     font-size: 1rem;
     border: none;
     border-radius: 5px;
-}
-
-
-/* CSS for Categories */
-.categories{
+  }
+  
+  /* CSS for Categories */
+  .categories {
     padding: 4% 0;
-}
-
-.box-3{
+  }
+  
+  .box-3 {
     width: 28%;
     float: left;
     margin: 2%;
-}
-
-
-/* CSS for Food Menu */
-.food-menu{
+  }
+  
+  /* CSS for Food Menu */
+  .food-menu {
     background-color: #ececec;
     padding: 4% 0;
-}
-.food-menu-box{
+  }
+  .food-menu-box {
     width: 43%;
     margin: 1%;
     padding: 2%;
     float: left;
     background-color: white;
     border-radius: 15px;
-}
-
-.food-menu-img{
+  }
+  
+  .food-menu-img {
     width: 20%;
     float: left;
-}
-
-.food-menu-desc{
+  }
+  
+  .food-menu-desc {
     width: 70%;
     float: left;
     margin-left: 8%;
-}
-
-.food-price{
+  }
+  
+  .food-price {
     font-size: 1.2rem;
     margin: 2% 0;
-}
-.food-detail{
+  }
+  .food-detail {
     font-size: 1rem;
     color: #747d8c;
-}
-
-
-/* CSS for Social */
-.social ul{
+  }
+  
+  /* CSS for Social */
+  .social ul {
     list-style-type: none;
-}
-.social ul li{
+  }
+  .social ul li {
     display: inline;
     padding: 1%;
-}
-
-/* for Order Section */
-.order{
+  }
+  
+  /* for Order Section */
+  .order {
     width: 50%;
     margin: 0 auto;
-}
-.input-responsive{
+  }
+  .input-responsive {
     width: 96%;
     padding: 1%;
     margin-bottom: 3%;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
-}
-.order-label{
-    margin-bottom: 1%; 
+  }
+  .order-label {
+    margin-bottom: 1%;
     font-weight: bold;
-}
-
-
-
-/* CSS for Mobile Size or Smaller Screen */
-
-@media only screen and (max-width:768px){
-    .logo{
-        width: 80%;
-        float: none;
-        margin: 1% auto;
+  }
+  
+  /* CSS for Mobile Size or Smaller Screen */
+  
+  @media only screen and (max-width: 768px) {
+    .logo {
+      width: 80%;
+      float: none;
+      margin: 1% auto;
     }
-
-    .menu ul{
-        text-align: center;
+  
+    .menu ul {
+      text-align: center;
     }
-
-    .food-search input[type="search"]{
-        width: 90%;
-        padding: 2%;
-        margin-bottom: 3%;
+  
+    .food-search input[type="search"] {
+      width: 90%;
+      padding: 2%;
+      margin-bottom: 3%;
     }
-
-    .btn{
-        width: 91%;
-        padding: 2%;
+  
+    .btn {
+      width: 91%;
+      padding: 2%;
     }
-
-    .food-search{
-        padding: 10% 0;
+  
+    .food-search {
+      padding: 10% 0;
     }
-
-    .categories{
-        padding: 20% 0;
+  
+    .categories {
+      padding: 20% 0;
     }
-    h2{
-        margin-bottom: 10%;
+    h2 {
+      margin-bottom: 10%;
     }
-    .box-3{
-        width: 100%;
-        margin: 4% auto;
+    .box-3 {
+      width: 100%;
+      margin: 4% auto;
     }
-
-    .food-menu{
-        padding: 20% 0;
+  
+    .food-menu {
+      padding: 20% 0;
     }
-
-    .food-menu-box{
-        width: 90%;
-        padding: 5%;
-        margin-bottom: 5%;
+  
+    .food-menu-box {
+      width: 90%;
+      padding: 5%;
+      margin-bottom: 5%;
     }
-    .social{
-        padding: 5% 0;
+    .social {
+      padding: 5% 0;
     }
-    .order{
-        width: 100%;
+    .order {
+      width: 100%;
     }
-}
-.cart{
+  }
+  .cart {
     display: inline-block;
-    text-align : center;
+    text-align: center;
     height: 60px;
     width: 100px;
     line-height: 60px;
-}
-.cart a{
+  }
+  .cart a {
     vertical-align: middle;
-}
-.icon-cart{
-    font-size:28px;
-    color:#ececec;
-    margin:auto;
+  }
+  .icon-cart {
+    font-size: 28px;
+    color: #ececec;
+    margin: auto;
     vertical-align: middle;
-}
+  }
+  
+  .badge {
+    padding-left: 9px;
+    padding-right: 9px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+  }
+  
+  
+  .badge-warning[href] {
+    background-color: #c67605;
+  }
+  #lblCartCount {
+    font-size: 12px;
+    background: #ff0000;
+    color: #fff;
+    padding: 0 5px;
+    vertical-align: top;
+    margin-left: -10px;
+  }
+  p{
+  display: flex;
+  }
+  .profile {
+    color: #ff6b81;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    font-size: 13px;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+    color: #ff6b81;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+  
