--- a/food-order-website-php/css/cart.css
+++ b/food-order-website-php/css/cart.css
@@ -41,7 +41,7 @@
     background-color: white;
     padding: 16px 8px;
     border-radius: 5px;
-    margin-bottom: 16px;
+    margin-bottom: 150px;
 }
 .cart-contain{
    
@@ -79,7 +79,7 @@
 
 }
 .cart-page{
-    margin : 32px 0;
+    margin-top : 32px;
   
 }
 .total-price-value{
